# ligent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  package-lock.json  package.json  proposal.md
backend/: app.py  pyproject.toml
backend/agents/: README.md  __init__.py  adk_models.py  adk_runtime.py  mock_agents.py  roles.py
backend/api/: __init__.py  routes.py
backend/llm/: __init__.py  contracts.py  errors.py  ollama.py  planning.py
backend/services/: __init__.py  controller.py  run_service.py  schemas.py
backend/state/: __init__.py  models.py  store.py
backend/tests/: test_app.py  test_controller.py  test_ollama_provider.py  test_project_store.py  test_state_contracts.py  test_tool_permissions.py
backend/tools/: __init__.py  permissions.py
desktop/: index.html  package.json
desktop/src/: App.tsx  api.ts  styles.css  tauri.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
workspace/sample-app/: README.md  app.py
