[project]
name = "ligent-backend"
version = "0.1.0"
description = "Local FastAPI backend for Ligent orchestration"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.125.0",
  "pydantic>=2.12.0",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agents*", "llm*", "services*", "state*", "tools*"]
