[package]
name = "ligent"
version = "0.1.0"
description = "Local-first coding agent orchestrator desktop shell"
authors = ["Ligent"]
edition = "2021"

[lib]
name = "ligent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
